--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.2.8",
     "@reduxjs/toolkit": "^2.2.6",
     "jwt-decode": "^4.0.0",
+    "ol": "^9.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
